# pixman

./: .bazelrc  .gitignore  MODULE.bazel
pixman/: BUILD.bazel
test/: test_defs.bzl
